tests/valid/TupleType_Valid_3.whiley
(int,int) f(int x):
    return (x,x+2)

void main([string] args):
    x,y = f(1)
    println(str(x))
    println(str(y))
